fix(shs-6400): fix issue in stretched vertical cards inside grid

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.grid.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.grid.scss
@@ -32,6 +32,7 @@
   }
 
   &__item {
+    display: flex;
     margin-bottom: calc(#{hb-spacing-width('default', false)} / 2);
 
     @include grid-media-min('sm') {
