--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-linked-card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-linked-card.scss
@@ -55,7 +55,6 @@
   .hb-stretch-vertical-linked-cards & {
     display: flex;
     flex-flow: column nowrap;
-    height: 100%;
   }
 
   &__img {
